--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,13 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #ffffff;
   }
 }
 
@@ -26,7 +26,7 @@ body {
 }
 
 .header {
-  @apply bg-gray-800 text-white p-4;
+  @apply bg-white text-white p-4;
 }
 
 .header nav ul {
